# maestro-guard

./: .gitignore  .pre-commit-hooks.yaml  HALLUCINATION_FIX_PLAN.md  README.md  pyproject.toml  setup.py  stress_test.py  stress_test_report.md  stress_test_round2.py  stress_test_round3.py  stress_test_round3_report.json
.github/workflows/: ci.yml  maestro-guard.yml
demo/: clean.html  dashboard.html  exec_spec.md  spec.md
maestro_guard/: __init__.py  __main__.py  cli.py  report.py  review.py
maestro_guard/checks/: __init__.py  console_errors.py  dom_refs.py  dynamic.py  fulfillment.py  handlers.py  js_syntax.py
maestro_guard/review/: __init__.py  aggregator.py  improver.py  prompts.py
maestro_guard/sandbox/: Dockerfile  __init__.py  runner.py
maestro_guard/specs/: __init__.py  executor.py  parser.py
tests/: test_dynamic_check.py  test_guard.py  test_review.py  test_specs.py
tests/fixtures/: bad.html  broken.html  broken_spec.md  good.html  hello.html  hello_spec.md
