[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maestro-guard"
version = "0.1.0"
description = "A static analysis tool for HTML/JS quality checks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
maestro-guard = "maestro_guard.cli:main"
